# os-synchronization-examples

./: CMakeLists.txt  README.md  main1.cpp  main2.cpp  producer-consumer.cpp  单生产者-单消费者.cpp  多生产者-多消费者.cpp
dining-philosophers/: 哲学家进餐问题-一个人拿完筷子其他人才可以拿筷子.cpp  哲学家进餐问题-分奇偶拿左右.cpp  哲学家进餐问题-限制进餐人数.cpp
lib/: Semaphore.h  ThreadManager.h  oslib.h
producer-consumer/: 单生产者-单消费者.cpp  多生产者-单消费者.cpp  多生产者-多消费者.cpp  生产多种产品的单生产者-多消费者.cpp
reader-writer/: 读者-写者.cpp
